# SHSM_Project

./: .gitignore  README.md
client/src-tauri/: Cargo.toml  tauri.conf.json
client/src-tauri/migrations/2023-01-22-003208_database/: up.sql
client/src-tauri/src/: lib.rs  main.rs
client/ui/: certifications.css  certifications.html  classlist.css  classlist.html  classlist.js  events.css  events.html  home.css  home.html  home.js  login.css  login.html  main.js  shsm-selection.css  shsm-selection.html  student_events.html  student_events.js  student_home.html  teacher_events.html  teacher_events.js  teacher_home.html
netstruct/: Cargo.toml
netstruct/migrations/2023-01-22-003208_database/: down.sql  up.sql
netstruct/src/: lib.rs  models.rs  schema.rs
server/: .env  Cargo.toml
server/migrations/2023-01-22-003208_database/: down.sql  up.sql
server/src/: db_tools.rs  main.rs  models.rs  schema.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/migrations/2023-01-22-003208_database/: down.sql  up.sql
src-tauri/src/: models.rs  schema.rs
ui/: LogIn.html  certifications.css  certifications.html  classlist.css  classlist.html  classlist.js  events.css  events.html  events.js  home.css  home.html  index.html  login.html  style.css
ui/images/: Hats evolve overtime.m4v
