[package]
name = "netstruct"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
ring = "0.16.20"
diesel = { version = "2.0.0", features = ["postgres"] }
chrono = "0.4.23"
